Fixes for alert positioning on small displays

--- a/sass/sections/_main.scss
+++ b/sass/sections/_main.scss
@@ -120,10 +120,12 @@
 
 	@media only screen and (max-width: 425px) {
   	font-size: 0.5rem;
+  	margin-top: 2rem;
   }
 
   @media only screen and (min-width: 426px) and (max-width: 750px) {
   	font-size: 0.75rem;
+  	margin-top: 2rem;
   }
 
 	&::before,
@@ -203,8 +205,7 @@
 	z-index: 1;
 
 	@media only screen and (max-width: 425px) {
-		bottom: auto;
-		top: 1rem;
+		width: 100%;
 	}
 
 	&--neutral {
